Bug 1755206 - Allow setting context for remote debugging in content process. r=dom-storage-reviewers,janv

Differential Revision: https://phabricator.services.mozilla.com/D180432