dom/quota/ActorsParent.h
@@ -15,6 +15,8 @@ class PQuotaParent;
 
 void InitializeQuotaManager();
 
+void InitializeScopedLogExtraInfo();
+
 PQuotaParent* AllocPQuotaParent();
 
 bool DeallocPQuotaParent(PQuotaParent* aActor);
